<resources>
    <string name="app_name">Absensi</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="title_activity_menu">Menu</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_dashboard">Beranda</string>
    <string name="title_rekap">Rekap</string>
    <string name="title_jadwal">Jadwal</string>
    <string name="title_profil">Profil</string>

    <string name="agenda">Agenda</string>
    <string name="shift">Jadwal Shift</string>
    <string name="izin">Izin</string>
    <string name="perjalanan_dinas">Perjalanan Dinas</string>
    <string name="kehadiran">Kehadiran</string>

    <string name="empty">--</string>
    <string name="ok">OK</string>
    <string name="cancel">Mmmmh, no</string>
    <string name="error">Error</string>

    <string name="mockLocationMessage">Stop\nMocking\nMe</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="timenol">--:--</string>
    <string name="_09_februari_2022">09 Februari 2022</string>
    <string name="ttkehadiran">Kehadiran</string>
    <string name="beranda">Beranda</string>
    <string name="rekap">Rekap</string>
    <string name="jadwal">Jadwal</string>
    <string name="profil">Profil</string>
    <string name="tltitle">Tugas Lapangan</string>
    <string name="masuk">MASUK</string>
    <string name="kirim">KIRIM</string>
    <string name="pulang">PULANG</string>
    <string name="titlepd">Perjalanan Dinas</string>
    <string name="versiapp">Versi: 3.0.1</string>
    <string name="eabsensi">eAbsensi</string>
    <string name="nip_nik">NIP/NIK</string>
    <string name="silahkan_masuk_ke_akun_anda">Silahkan Masuk ke Akun Anda</string>
    <string name="password">Password</string>
    <string name="cttan">Jika anda belum memiliki akun pegawai, silahkan hubungi bagian umum OPD anda.</string>
    <string name="dokumen_surat_perintah">Dokumen Surat Perintah</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="data_perjalanan_dinas">Data Perjalanan Dinas</string>
    <string name="kegiatan_lainnya_opsional">Kegiatan Lainnya: (Opsional)</string>
    <string name="cuti">Cuti</string>
    <string name="_10">10</string>
    <string name="keperluan_pribadi">Keperluan Pribadi</string>
    <string name="sakit">Sakit</string>
    <string name="penyakit_opsional">Penyakit: (Opsional)</string>
    <string name="jadwal_shift">Jadwal Shift</string>
    <string name="singkronkan_kegiatan">Singkronkan Kegiatan</string>
    <string name="singkronkan_lokasi">Singkronkan Lokasi</string>
    <string name="singkronkan_jadwal_shift">Singkronkan Jadwal Shift</string>
    <string name="berhasil">Berhasil!</string>
    <string name="x">x</string>
    <string name="kembali">Kembali</string>
    <string name="tugas_lapangan">Tugas Lapangan</string>
    <string name="download_info">download info</string>
    <string name="unduh_data">Unduh Data</string>
    <string name="m_malam">M: Malam</string>
    <string name="s_sore">S: Sore</string>
    <string name="p_pagi">P: Pagi</string>
    <string name="keterangan">Keterangan:</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">Perangkat ini tidak mendukung Camera2 API.</string>
    <string name="cari_rekap_kehadiran">Cari Rekap Kehadiran</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDpoOACMXG6YJoY-OD1z9JhPD56z-efFpE</string>
    <string name="tutup_modal_ganti_password">tutup modal ganti password</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="password_sebelumnya">password sebelumnya</string>
    <string name="password_baru">password baru</string>
    <string name="masukkan_kembali_password_baru">masukkan kembali password baru</string>
    <string name="profil_pegawai">PROFIL PEGAWAI</string>
    <string name="informasi_pegawai">Informasi Pegawai</string>
    <string name="jabatan">Jabatan</string>
    <string name="staf">Staf</string>
    <string name="pegawai">Pegawai</string>
    <string name="pengatur_ii_c">Pengatur (II/c)</string>
    <string name="kelompok">Kelompok</string>
    <string name="bidang_aplikasi_dan_informatika">Bidang Aplikasi dan Informatika</string>
    <string name="pengembangan_aplikasi_informatika">Pengembangan Aplikasi Informatika</string>
    <string name="email">Email</string>
    <string name="febriwinando_gmail_com">febriwinando@gmail.com</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="_085762183348">085762183348</string>
    <string name="strip">-</string>
    <string name="opd">OPD</string>
    <string name="jl_m_akub_hasibuan_kel_tanjung_marulak_kec_rambutan_tebing_tinggi">Jl. M. Akub Hasibuan, Kel. Tanjung Marulak, Kec. Rambutan, Tebing Tinggi</string>
    <string name="pengaturan_profil">Pengaturan Profil</string>
    <string name="panduan">panduan</string>
    <string name="panduan_aplikasi">Panduan Aplikasi</string>
    <string name="privasi">Privasi</string>
    <string name="keluar">Keluar</string>
    <string name="reset_password">Reset Password!</string>
    <string name="lupa_password">Lupa Password,</string>
    <string name="apakah_anda_yakin_akan_keluar">Apakah anda yakin akan keluar?</string>
    <string name="batal">Batal</string>
    <string name="peringatan">Peringatan!</string>
    <string name="sedang_proses">Memproses…</string>
    <string name="close_view_success">close view success</string>
    <string name="survei_core_value">SURVEI CORE VALUE</string>
    <string name="silahkan_pilih_core_values_asn_berakhlak_yang_anda_kerjakan_hari_ini">Silahkan pilih Core Values ASN BerAKHLAK yang anda kerjakan hari ini:</string>
    <string name="coba_kembali">Coba Kembali</string>
    <string name="rabu_09_februari_1994">Rabu, 09 Februari 1994</string>
    <string name="validasi_masuk">VALIDASI MASUK</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>