<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/backgoundputih"
    android:backgroundTint="@color/surface_main"
    android:gravity="center"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:layout_margin="20dp"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/emoticon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_sukses"
            app:tint="@color/primary_brand"
            android:contentDescription="@string/todo" />


            <TextView
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/emoticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berhasil"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/text_primary"
                />


        <ImageView
            android:id="@+id/ivTutupDialogBerhasil"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/close_view_success"
            android:src="@drawable/one_close"
            app:tint="@color/text_primary"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSukseKeterangan"
        android:textColor="@color/text_secondary"
        android:visibility="gone"
        />

</LinearLayout>