<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:background="@drawable/backgoundputih"
    android:backgroundTint="@color/surface_main">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ganti_password"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"
                    android:layout_centerInParent="true"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/ivCloseGantiPass"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:contentDescription="@string/tutup_modal_ganti_password"
                    android:src="@drawable/one_close"
                    app:tint="@color/text_primary"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/etPasswordSebelum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="Password Sebelumnya"
            android:background="@drawable/backgroundwhiteradius"
            android:drawableStart="@drawable/one_lock"
            android:hint="@string/password_sebelumnya"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="Password Baru"
            android:background="@drawable/backgroundwhiteradius"
            android:drawableStart="@drawable/one_lock"
            android:hint="@string/password_baru"
            android:inputType="textPassword"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint"
            android:padding="15dp"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/etEntryNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/backgroundwhiteradius"
            android:drawableStart="@drawable/one_lock"
            android:hint="@string/masukkan_kembali_password_baru"
            android:autofillHints="Masukkan Kembali Password Baru"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_hint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password baru belum sesuai"
            android:textColor="@color/merah"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:id="@+id/statuspass"/>

        <TextView
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:textAlignment="center"
            android:id="@+id/btnGantiPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundnavbar"
            android:text="@string/ganti_password"
            android:textSize="18sp"
            android:onClick="gantipass"
            android:textColor="@color/on_primary_brand" />

        <ProgressBar
            android:id="@+id/pbGantiPass"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:indeterminateTint="@color/primary_brand"/>


</LinearLayout>